<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="Hadist Mobile"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="143dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/hadist" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="50px"
        android:layout_weight="1"
        android:background="@drawable/button_rounded"
        android:onClick="hadist"
        android:text="@string/hadist" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="50px"
        android:layout_weight="1"
        android:background="@drawable/button_rounded"
        android:onClick="adzan"
        android:text="@string/jadwal" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="50px"
        android:layout_weight="1"
        android:background="@drawable/button_rounded"
        android:onClick="exit"
        android:text="@string/keluar" />


</LinearLayout>