<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kota"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:paddingLeft="10dp"
            />

        <EditText
            android:id="@+id/input"
            android:layout_width="175dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="5dp"/>

        <Button
            android:id="@+id/cari"

            android:layout_width="76dp"
            android:layout_height="38dp"
            android:layout_gravity="right"

            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="@string/cari" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jadwal"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20dp"/>



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/masjid"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sholat"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/jam"
            android:textColor="@color/black"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Subuh"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/JamSubuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/textView14"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Dzuhur"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/JamDzuhur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/textView16"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Ashar"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/JamAshar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/textView18"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Magrib"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/JamMagrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/textView20"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Isya"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/JamIsya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>


</LinearLayout>